<resources>
    <string name="app_name">Restaurant</string>
    <string name="user">USER</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="edituser">nick user</string>
    <string name="editpassw">your password</string>
    <string name="save">Save</string>
    <string name="breackfast">Breackfast</string>
    <string name="lunch">Lunch</string>
    <string name="Dinner">Dinner</string>
    <string name="drinks">Drinks</string>
    <string name="snacks">Snacks</string>
    <string name="mensajeError">Invalid Username or Password</string>

    <string name="breakfast">Breakfast</string>
    <string name="healthy">Healthy</string>
    <string name="traditional">Traditional</string>
    <string name="cereal">Cereal</string>
    <string name="btnbreakfast">Request</string>

</resources>